# qwen-llm-rs

./: .gitignore  Cargo.toml  README.md
assets/qwen3vl/: model_and_mmproj_here
scripts/: all.ps1  context.ps1
src/: api.rs  bindings.rs  main.rs
