[package]
name = "qwen-llm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.44"
color-eyre = "0.6.5"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", features = ["mtmd", "cuda"] }
llama-cpp-sys-2 = { git = "https://github.com/utilityai/llama-cpp-rs" }
gag = "1.0.0"
