[package]
name = "qwen-llm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
color-eyre = "0.6.5"
# Bindings deps:
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", features = ["mtmd", "cuda"] }
llama-cpp-sys-2 = { git = "https://github.com/utilityai/llama-cpp-rs" }
gag = "1.0.0"
# API deps:
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
serde_json = "1.0.149"
base64 = "0.22.1"